--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -41,8 +41,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.commons-codec-1.12.jar}:\
-    ${file.reference.bc-fips-1.0.1.jar}:\
-    ${file.reference.bcpkix-fips-1.0.3.jar}
+    ${file.reference.bcpkix-fips-1.0.3.jar}:\
+    ${file.reference.bc-fips-1.0.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -63,6 +63,7 @@ javac.test.processorpath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -71,11 +72,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jlink.launcher=false
+jlink.launcher.name=testePBKDF2
 main.class=PBKDF2Util
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_1.8
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
