--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=testePBKDF2
+application.title=exercicio12
 application.vendor=Carla
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -29,12 +29,12 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/testePBKDF2.jar
+dist.jar=${dist.dir}/exercicio12.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bc-fips-1.0.1.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\testeKeyStore\\dist\\lib\\bc-fips-1.0.1.jar
-file.reference.bcpkix-fips-1.0.3.jar=C:\\Users\\Felipe\\Documents\\NetBeansProjects\\testeKeyStore\\dist\\lib\\bcpkix-fips-1.0.3.jar
+file.reference.bc-fips-1.0.1.jar=../testeKeyStore/dist/lib/bc-fips-1.0.1.jar
+file.reference.bcpkix-fips-1.0.3.jar=../testeKeyStore/dist/lib/bcpkix-fips-1.0.3.jar
 file.reference.commons-codec-1.12.jar=../bibliotecas/commons-codec-1.12.jar
 file.reference.testePBKDF2-src=src
 includes=**
@@ -73,8 +73,8 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
-jlink.launcher.name=testePBKDF2
-main.class=PBKDF2Util
+jlink.launcher.name=exercicio12
+main.class=Exercicio12
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
